# wg-easy-stats-collector

./: README.md  main.py  pyproject.toml
collector/: clickhouse.py  collector.py  schemas.py
tests/: conftest.py  factories.py  test_clickhouse.py  test_collector.py
